--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -11,7 +11,6 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <!--Load optional function-->
         <script src="js/shareServer.js"></script>
-        <script src="js/cacheValue.js"></script>
     </head>
     <body>
     	<!--All js function-->
@@ -19,14 +18,20 @@
             &nbsp;<span class="navbar-brand">Share Server</span>
         </nav><br /><br /><br /><br />
         <div class="container">
-                <div class="input-group mb-3">
-                    <input type="text" class="form-control" placeholder="Link to share" id="link" />
-                    <div class="input-group-append">
-                        <button type="button" class="btn btn-secondary" onclick="addLink()">Share</button>
-                    </div>
+            <div class="input-group mb-3">
+                <input type="text" class="form-control" placeholder="Link to share" id="link" />
+                <div class="input-group-append">
+                    <button type="button" class="btn btn-secondary" onclick="addLink()">Share</button>
                 </div>
-            <iframe src="LoadLinks.html" style="width: 100%; height: 300px;"></iframe>
+            </div>
+            <ul class="nav nav-tabs">
+                <li class="nav-item"><a href="javascript:window.location.href=window.location.href"><button class="btn btn-outline-primary">Refresh</button></a></li>
+            </ul>
+            <div id="content"></div>
         </div>
         <iframe name="iFrameRestController" style="display: none;"></iframe>
+        <script type="text/javascript">
+        	loadAllLinks();
+    	</script>
     </body>
 </html>
